--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff;
+  background-color: #ff8ea4;
   color: #0a0a0a;
   font-family: 'Bad Script', cursive;
   margin: 2em;
@@ -118,3 +118,4 @@ img {
   margin-bottom: 1em;
   display: block;
 }
+
