--- a/styles.css
+++ b/styles.css
@@ -406,3 +406,22 @@ img {
   font-size: 2.4rem;
   margin: 0;
 }
+
+
+.video-container { 
+  position: relative; 
+  width: 100%; 
+  padding-bottom: 56.25%; 
+  height: 0; 
+  overflow: hidden; 
+  margin-bottom: 1rem; 
+}
+.video-container iframe { 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+}
+.cancion { margin-bottom: 2rem; }
+
